== Change Log

=== SVN
* Make LoginSystem store user ids in session rather than whole user objects. [Sean Cribbs]
* Plugins included in an extension's vendor/plugins directory will automatically
  be loaded before the extension is activated. Plugins included in more than one extension
  will be loaded only once according to the extension load order. [Sean Cribbs]
* Allow subclassing of FileNotFoundPage. [Daniel Sheppard]
* <r:find/> should not return FileNotFoundPage. [Daniel Sheppard]
* Change test for tabs to just check dupes and for the requested tab 
  rather than a specific list (test was breaking if a real extension added 
  a tab). [Daniel Sheppard]
* Ensure test extensions are loaded in the test environment. [Daniel Sheppard]
* Prevent ExtensionInitializationTest from unloading real extensions. [Daniel Sheppard]
* Expire the old URL from the cache when the page slug changes. [Daniel Sheppard]
* Fix failing tests in instance mode. [Daniel Sheppard]
* Move difference assertions upstream from forms extension into a test helper. [Sean Cribbs]
* Update Prototype to 1.5.0 final release. [Sean Cribbs]
* Allow specification of extension loading order in environment.rb [Daniel Sheppard]
* Fix bugs in assert_global_tag_defined and assert_tag_defined of 
  ExtensionTagTestHelper. [Sean Cribbs]
* Make sure included stylesheets and javascripts are only linked to once in 
  <head>. [Sean Cribbs]
* Fix navigation tag tests. [vitali]
* Suppress errors about missing default helper by providing a blank helper. 
  [Sean Cribbs]
* Fix mis-alignment of "Clear cache" button when homepage not present. 
  [Sean Cribbs]
* Fix issues with misnesting of modules in fixture loading extension and 
  test suites running randomly from dispatchers. [Sean Cribbs]
* Remove invalid image alignment. [tolbrino]
* Display not_found.rhtml on standard 'not found'-like exceptions. [Sean Cribbs]
* Make sitemap.js use relative URLs. [Earl Chew]